create 2 pages for solo project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<DOCTYPE!>
+<html>
+<head>
+	<title>Rock Climbing</title>
+</head>
+<body>
+	<h1>Welcome to my page of Rock Climbing!!!</h1>
+	<br>
+	<h2>Rock climing basics</h2>
+	   <p> Climbing is both an individualistic and social sport: when you're on the rock you can only count on your skills to get to the top. If you do fall however, you'll have to trust your climbing partner with your life. Beyond question. No mistakes allowed. This often makes for very strong bonds and relationships.<a href="http://www.rockclimbing.com/Articles/Introduction_to_Climbing/Picking_up_climbing_-_Part_1_Introduction_Overview_1.html">Click here to learn more</a>
+	   	</p>
+
+	<h2>Rock climbing gears</h2>
+	    <ul>
+	    	<li>Belay Devices</li>
+	    	<li>Climbing Shoes</li>
+	    	<li>Helmets</li>
+	    	<li>Climbing Ropes</li>
+
+	    </ul>
+	<h2></h2>
+
+</body>
+</html>
