add a list, a link, 2 block-level element to the page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	    	<li>Climbing Shoes</li>
 	    	<li>Helmets</li>
 	    	<li>Climbing Ropes</li>
+	    	<li>Ropes</li>
 
 	    </ul>
 	<h2></h2>
