add an image and a link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<h2>Rock climing basics</h2>
 	   <p> Climbing is both an individualistic and social sport: when you're on the rock you can only count on your skills to get to the top. If you do fall however, you'll have to trust your climbing partner with your life. Beyond question. No mistakes allowed. This often makes for very strong bonds and relationships.<a href="http://www.rockclimbing.com/Articles/Introduction_to_Climbing/Picking_up_climbing_-_Part_1_Introduction_Overview_1.html">Click here to learn more</a>
 	   	</p>
+	   	<img src="rockcliming.png"> 
+	   	image source: <em><a href="http://www.earthporm.com/insane-rock-climbing-photos-that-seem-to-defy-the-laws-of-nature/">click here</a></em>
 
 	<h2>Rock climbing gears</h2>
 	    <ul>
