add username and password input element

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 	    	<li>Ropes</li>
 
 	    </ul>
-	<h2></h2>
-
+	<h2>Log yourself in</h2>
+	    <label><strong>User Name</strong></label>
+	    <input type="text", name="username"/>
+	    <br>
+	    <label><strong>Password</strong></label>
+	    <input type="password", name="password"/>
 </body>
 </html>
