add a submit button linking to another page

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
 	    	<li>Ropes</li>
 
 	    </ul>
+	<form action="login.html">
 	<h2>Log yourself in</h2>
 	    <label><strong>User Name</strong></label>
 	    <input type="text", name="username"/>
 	    <br>
 	    <label><strong>Password</strong></label>
 	    <input type="password", name="password"/>
+	    <br>	 
+	    <button action="submit">log me in</button>
+	</form>
 </body>
 </html>
