--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	   	image source: <em><a href="http://www.earthporm.com/insane-rock-climbing-photos-that-seem-to-defy-the-laws-of-nature/">click here</a></em>
 
 	<h2>Rock climbing gears</h2>
+	    <p>If you’re planning a climbing expedition, make sure your have the essential gear for the trip, we can offer you belay devices and descenders, carabiners, harnesses for adults and kids, helmets and other protection items, high strength and top quality climbing ropes, chalk bags, and various sized crash pads. We also have a wide selection of ice climbing gear available, if you need crampons and accessories, gaiters, ice axes and hammers, ice protection, ice climbing accessories, snow shoes, or avalanche safety guides, make sure to have a look at our Alpine & Ice Climbing section.</p>
 	    <ul>
 	    	<li>Belay Devices</li>
 	    	<li>Climbing Shoes</li>
