--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE!>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Rock Climbing</title>
@@ -12,7 +12,7 @@
 	   	</p>
 	</div>
 
-	   	<img src="rockcliming.png"> 
+	   	<img src="rockcliming.png" alt="rock climbing"> 
 	   	image source: <em><a href="http://www.earthporm.com/insane-rock-climbing-photos-that-seem-to-defy-the-laws-of-nature/">click here</a></em>
 
 
@@ -32,12 +32,12 @@
 	<div>
 	<h2>Log yourself in</h2>
 	    <label><strong>User Name</strong></label>
-	    <input type="text", name="username"/>
+	    <input type="text" name="username"/>
 	    <br>
 	    <label><strong>Password</strong></label>
-	    <input type="password", name="password"/>
+	    <input type="password" name="password"/>
 	    <br>	 
-	    <button action="submit">log me in</button>
+	    <button type="button">log me in</button>
 	 </div>
 	</form>
 	<br>
@@ -50,7 +50,7 @@
 	<p>According to the <a href="http://www.w3schools.com/tags/tag_script.asp">definition</a> on W3Schools.com,<dfn>Script Element</dfn> either contains scripting statements, or it points to an external script file through the src attribute. Common uses for JavaScript are image manipulation, form validation, and dynamic changes of content. 
 	</p>
 
-    </p>
+   
 
 
 </body>
