--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Rock Climbing</title>
+	<title>Rock Climbing!</title>
 </head>
 <body>
 	<h1>Welcome to my page of Rock Climbing!!!</h1>
