--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		
+		<title>Rock Climbing </title>
+	</head>
+
+<body>
+	<h1>Welcome to my page of Rock Climbing!!!</h1>
+<br>
+
+<div>
+  <img src="rockcliming.png" alt="rockclimbing"> 
+  <em>view origin image, <a href="http://www.earthporm.com/insane-rock-climbing-photos-that-seem-to-defy-the-laws-of-nature/">click here </a> </em>
+</div>
+
+<div class="column1of3">
+	<h2>Rock Climbing Basics</h2>
+	<p> Climbing is both an individualistic and social sport: when you're on the rock you can only count on your skills to get to the top. If you do fall however, you'll have to trust your climbing partner with your life. Beyond question. No mistakes allowed. This often makes for very strong bonds and relationships.<a href="http://www.rockclimbing.com/Articles/Introduction_to_Climbing/Picking_up_climbing_-_Part_1_Introduction_Overview_1.html">Click here to learn more</a>
+
+	</p>
+
+</div>
+
+<div class="column2of3">
+	<h2>Rock Climbing Gears</h2>
+	<p>If you’re planning a climbing expedition, make sure your have the essential gear for the trip, we can offer you belay devices and descenders, carabiners, harnesses for adults and kids, helmets and other protection items, high strength and top quality climbing ropes, chalk bags, and various sized crash pads. We also have a wide selection of ice climbing gear available, if you need crampons and accessories, gaiters, ice axes and hammers, ice protection, ice climbing accessories, snow shoes, or avalanche safety guides, make sure to have a look at our Alpine &amp; Ice Climbing section.</p>
+
+	<ul>
+		<li>Belay Devices</li>
+		<li>Climbing Shoes</li>
+		<li>Helmets</li>
+		<li>Climbing Ropes</li>
+		<p><a href="http://www.rockclimbing.com/gear/">more...</a></p>
+	</ul>
+
+</div class="column3of3">
+<form action="login.html">
+<div>
+	<h2>Log yourself in</h2>
+	<label><strong>Username:</strong></label>
+	<input type="text" name="username">
+	<br>
+	<label><strong>Password:</strong></label>
+	<input type="password", name="password">
+	<br>
+	<button type="submit"> log me in</button>
+
+</div>
+</form>
+
+<div>
+    <h2>A website that has the same topic</h2>
+   Click <a href="http://www.rockclimbing.com/gear/">Here</a>
+
+   <p>This rockclimbing.com website has many tags that link to other page content ont the top, which makes it very organized and easy for the users to find what they are looking for. 
+
+	When checking out the source, I recognized some HTML elements, like link, meta, head, title, and etc. one of the tag I don`t recognize is the script tag, I guess it is something that define what script is using to edit this website. 
+
+	</p>
+
+	<p>According to the <a href="http://www.w3schools.com/tags/tag_script.asp">definition</a> on W3Schools.com,<dfn>Script Element</dfn> either contains scripting statements, or it points to an external script file through the src attribute. Common uses for JavaScript are image manipulation, form validation, and dynamic changes of content.</p>
+</div>
+
+
+
+</body>
+
+
+
+</html>
