--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Rock Climbing </title>
 	</head>
 
@@ -11,13 +11,15 @@
 <br>
 
 <div>
-  <img src="rockcliming.png" alt="rockclimbing"> 
-  <em>view origin image, <a href="http://www.earthporm.com/insane-rock-climbing-photos-that-seem-to-defy-the-laws-of-nature/">click here </a> </em>
+  <img class="climbing" src="rockcliming.png" alt="rockclimbing"> 
+  <p id="imagelink"><em>view origin image, <a id="basics" href="http://www.earthporm.com/insane-rock-climbing-photos-that-seem-to-defy-the-laws-of-nature/">click here </a> </em> </p>
 </div>
 
 <div class="column1of3">
 	<h2>Rock Climbing Basics</h2>
-	<p> Climbing is both an individualistic and social sport: when you're on the rock you can only count on your skills to get to the top. If you do fall however, you'll have to trust your climbing partner with your life. Beyond question. No mistakes allowed. This often makes for very strong bonds and relationships.<a href="http://www.rockclimbing.com/Articles/Introduction_to_Climbing/Picking_up_climbing_-_Part_1_Introduction_Overview_1.html">Click here to learn more</a>
+	<p> Climbing is both an individualistic and social sport: when you're on the rock you can only count on your skills to get to the top. If you do fall however, you'll have to trust your climbing partner with your life. Beyond question. No mistakes allowed. This often makes for very strong bonds and relationships.
+		<br>
+		<a id="basics" href="http://www.rockclimbing.com/Articles/Introduction_to_Climbing/Picking_up_climbing_-_Part_1_Introduction_Overview_1.html">Click here to learn more</a>
 
 	</p>
 
@@ -32,12 +34,13 @@
 		<li>Climbing Shoes</li>
 		<li>Helmets</li>
 		<li>Climbing Ropes</li>
-		<p><a href="http://www.rockclimbing.com/gear/">more...</a></p>
+		<p><a id="basics" href="http://www.rockclimbing.com/gear/">more...</a></p>
 	</ul>
 
-</div class="column3of3">
+</div>
+
 <form action="login.html">
-<div>
+<div class="column3of3">
 	<h2>Log yourself in</h2>
 	<label><strong>Username:</strong></label>
 	<input type="text" name="username">
@@ -50,9 +53,9 @@
 </div>
 </form>
 
-<div>
+<div class="another-web">
     <h2>A website that has the same topic</h2>
-   Click <a href="http://www.rockclimbing.com/gear/">Here</a>
+   Click <a id="basics" href="http://www.rockclimbing.com/gear/">Here</a>
 
    <p>This rockclimbing.com website has many tags that link to other page content ont the top, which makes it very organized and easy for the users to find what they are looking for. 
 
@@ -60,7 +63,7 @@
 
 	</p>
 
-	<p>According to the <a href="http://www.w3schools.com/tags/tag_script.asp">definition</a> on W3Schools.com,<dfn>Script Element</dfn> either contains scripting statements, or it points to an external script file through the src attribute. Common uses for JavaScript are image manipulation, form validation, and dynamic changes of content.</p>
+	<p>According to the <a id="basics" href="http://www.w3schools.com/tags/tag_script.asp">definition</a> on W3Schools.com,<dfn>Script Element</dfn> either contains scripting statements, or it points to an external script file through the src attribute. Common uses for JavaScript are image manipulation, form validation, and dynamic changes of content.</p>
 </div>
 
 
