--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 	<label><strong>Password:</strong></label>
 	<input type="password", name="password">
 	<br>
-	<button type="submit"> log me in</button>
+	<button class="button" type="submit"> log me in</button>
+
+	<p >what do you think of this website?</p>
+	<textarea name="comments" cols="30" rows="4">leave your comments here...</textarea>
 
 </div>
 </form>
@@ -66,7 +69,7 @@
 	<p>According to the <a id="basics" href="http://www.w3schools.com/tags/tag_script.asp">definition</a> on W3Schools.com,<dfn>Script Element</dfn> either contains scripting statements, or it points to an external script file through the src attribute. Common uses for JavaScript are image manipulation, form validation, and dynamic changes of content.</p>
 </div>
 
-
+<footer> this page is created by Jessie Yang, comments welcomed!</footer>
 
 </body>
 
