--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                       </div>
                     </div>
                 </div>
+
                 <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
                       <img src="img/portfolio/thumbnails/js-30-days.png" alt="...">
@@ -177,8 +178,29 @@
                     <div class="thumbnail">
                       <img src="img/portfolio/thumbnails/1.jpg" alt="...">
                       <div class="caption">
-                        <h3>PHP</h3>
-                        <p>a PHP website</p>
+                        <h3>Portfolio Manager</h3>
+                        <p>Ruby on Rails</p>
+                        <p><a href="#" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
+                      </div>
+                    </div>
+                </div>
+                
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                      <img src="img/portfolio/thumbnails/1.jpg" alt="...">
+                      <div class="caption">
+                        <h3>Web App</h3>
+                        <p>Data Visualization</p>
+                        <p><a href="#" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                      <img src="img/portfolio/thumbnails/1.jpg" alt="...">
+                      <div class="caption">
+                        <h3>Web App</h3>
+                        <p>Data Visualization</p>
                         <p><a href="#" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
                       </div>
                     </div>
