--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                       <div class="caption">
                         <h3>V-Hab</h3>
                         <p>A VR game for hand rehabilitation</p>
-                        <p><a href="https://github.com/jessieyang0320/VHab" class="btn btn-primary" role="button">github</a> <a href="https://v-hab.herokuapp.com/index.html" class="btn btn-default" role="button">live demo</a></p>
+                        <p><a href="https://github.com/jessieyang0320/VHab" class="btn btn-primary" role="button" target="_blank">github</a> <a href="https://v-hab.herokuapp.com/index.html" target="_blank" class="btn btn-default" role="button">live demo</a></p>
                       </div>
                     </div>
                 </div>
@@ -148,8 +148,8 @@
                       <img src="img/portfolio/thumbnails/news-republic-650.png" alt="...">
                       <div class="caption">
                         <h3>News Republic</h3>
-                        <p>Node.js and React</p>
-                        <p><a href="https://github.com/jessieyang0320/News-Republic" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
+                        <p>Node.js, React and AntDesign</p>
+                        <p><a href="https://github.com/jessieyang0320/News-Republic" class="btn btn-primary" role="button" target="_blank">github</a> <a href="#" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
                 </div>
@@ -158,8 +158,8 @@
                       <img src="img/portfolio/thumbnails/responsive-website.png" alt="...">
                       <div class="caption">
                         <h3>A P2P Company Website</h3>
-                        <p>A responsive designed website</p>
-                        <p><a href="https://github.com/jessieyang0320/responsive-web-design" class="btn btn-primary" role="button">github</a> <a href="https://htmlpreview.github.io/?https://github.com/jessieyang0320/responsive-web-design/blob/master/src/index.html" class="btn btn-default" role="button">live demo</a></p>
+                        <p>Responsive Website Desgin</p>
+                        <p><a href="https://github.com/jessieyang0320/responsive-web-design" class="btn btn-primary" role="button" target="_blank">github</a> <a href="https://htmlpreview.github.io/?https://github.com/jessieyang0320/responsive-web-design/blob/master/src/index.html" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
                 </div>
@@ -169,8 +169,8 @@
                       <img src="img/portfolio/thumbnails/js-30-days.png" alt="...">
                       <div class="caption">
                         <h3>JavaScript 30 days</h3>
-                        <p>Vanilla JS 30 days challenge</p>
-                        <p><a href="https://github.com/jessieyang0320/JavaScript-30days" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
+                        <p>30 small apps with vanilla JavaScript</p>
+                        <p><a href="https://github.com/jessieyang0320/JavaScript-30days" class="btn btn-primary" role="button" target="_blank">github</a> <a href="#" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
                 </div>
@@ -178,9 +178,9 @@
                     <div class="thumbnail">
                       <img src="img/portfolio/thumbnails/1.jpg" alt="...">
                       <div class="caption">
-                        <h3>Portfolio Manager</h3>
-                        <p>Ruby on Rails</p>
-                        <p><a href="#" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
+                        <h3>Comming soon... Portfolio Manager</h3>
+                        <p>Ruby on Rails, React and bootstrap</p>
+                        <p><a href="#" class="btn btn-primary" role="button" target="_blank">github</a> <a href="#" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
                 </div>
@@ -189,33 +189,12 @@
                     <div class="thumbnail">
                       <img src="img/portfolio/thumbnails/1.jpg" alt="...">
                       <div class="caption">
-                        <h3>Web App</h3>
+                        <h3>Comming soon...Web App</h3>
                         <p>Data Visualization</p>
-                        <p><a href="#" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
+                        <p><a href="#" class="btn btn-primary" role="button" target="_blank">github</a> <a href="#" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      <img src="img/portfolio/thumbnails/1.jpg" alt="...">
-                      <div class="caption">
-                        <h3>Web App</h3>
-                        <p>Data Visualization</p>
-                        <p><a href="#" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      <img src="img/portfolio/thumbnails/1.jpg" alt="...">
-                      <div class="caption">
-                        <h3>Web App</h3>
-                        <p>Data Visualization</p>
-                        <p><a href="#" class="btn btn-primary" role="button">github</a> <a href="#" class="btn btn-default" role="button">live demo</a></p>
-                      </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
@@ -232,11 +211,11 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 text-center">
-                     <a class="btn btn-warm btn-xl" href="https://www.linkedin.com/in/jessie-lijie-yang/" id="contact"><i class="fa fa-linkedin-square" id="contact-icon" aria-hidden="true"></i>LinkedIn</a>
+                     <a class="btn btn-warm btn-xl" href="https://www.linkedin.com/in/jessie-lijie-yang/" id="contact" target="_blank"><i class="fa fa-linkedin-square" id="contact-icon" aria-hidden="true"></i>LinkedIn</a>
                     
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
-                     <a class="btn btn-warm btn-xl" href="https://github.com/jessieyang0320"><i class="fa fa-github" id="contact-icon" aria-hidden="true"></i>GitHub</a>
+                     <a class="btn btn-warm btn-xl" href="https://github.com/jessieyang0320" target="_blank"><i class="fa fa-github" id="contact-icon" aria-hidden="true"></i>GitHub</a>
                     
                 </div>
 
