--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
                         <h3>Powerful Frameworks</h3>
-                        <p class="text-muted">I work with agile frameworks such as Node.js, React, Angular, and Ruby on Rails.</p>
+                        <p class="text-muted">I work with agile frameworks such as Node.js, React, and Ruby on Rails.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -178,7 +178,7 @@
                     <div class="thumbnail">
                       <img src="img/portfolio/thumbnails/1.jpg" alt="...">
                       <div class="caption">
-                        <h3>Comming soon... Portfolio Manager</h3>
+                        <h3>Comming soon... </h3>
                         <p>Ruby on Rails, React and bootstrap</p>
                         <p><a href="#" class="btn btn-primary" role="button" target="_blank">github</a> <a href="#" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
@@ -187,11 +187,11 @@
                 
                 <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
-                      <img src="img/portfolio/thumbnails/1.jpg" alt="...">
+                      <img src="img/portfolio/thumbnails/data.png" alt="data-visualize">
                       <div class="caption">
-                        <h3>Comming soon...Web App</h3>
-                        <p>Data Visualization</p>
-                        <p><a href="#" class="btn btn-primary" role="button" target="_blank">github</a> <a href="#" class="btn btn-default" role="button" target="_blank">live demo</a></p>
+                        <h3>Data Visualized Report</h3>
+                        <p>Data Visualization,Canvas, HTML, CSS,jQuery</p>
+                        <p><a href="https://github.com/jessieyang0320/report-canvas" class="btn btn-primary" role="button" target="_blank">github</a> <a href="https://htmlpreview.github.io/?https://github.com/jessieyang0320/report-canvas/blob/master/index.html" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
                 </div>
