--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Hi, You are looking at Jessie Yang`s website</h1>
                 <hr>
-                <p>A Front-end developer and VR enthusiastic, always learning and always envolving</p>
+                <p>A Front-end developer and VR enthusiast, always learning and always envolving</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
-                    <p class="text-faded">My name is Jessie Yang. I am a full-stack developer based in New York City. I went to Bentley University and my background is in accounting. As a developer, I am now building fully functional dynamic web applications and it is really satisfying being able to put all the pieces together.
+                    <p class="text-faded">My name is Jessie Yang. I am a full-stack developer and a VR enthusiast based in New York City. I went to Bentley University and my background was in accounting. As a developer, I care about user experience and I enjoy building fully functional dynamic web applications with Node.js, React, Ruby on Rails.
                 <br/>When I'm not working on a new app, you can catch me discovering new parts of the city, attending VR meet-ups or trying to find the best cup of coffee.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">See my skills!</a>
                 </div>
@@ -158,7 +158,7 @@
                       <img src="img/portfolio/thumbnails/responsive-website.png" alt="...">
                       <div class="caption">
                         <h3>A P2P Company Website</h3>
-                        <p>Responsive Website Desgin</p>
+                        <p>Front End Work: Responsive Website Desgin</p>
                         <p><a href="https://github.com/jessieyang0320/responsive-web-design" class="btn btn-primary" role="button" target="_blank">github</a> <a href="https://htmlpreview.github.io/?https://github.com/jessieyang0320/responsive-web-design/blob/master/src/index.html" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
@@ -176,25 +176,26 @@
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
+                      <img src="img/portfolio/thumbnails/data.png" alt="data-visualize">
+                      <div class="caption">
+                        <h3> Courses Report (mobile app)</h3>
+                        <p>Data Visualization,Canvas, HTML, CSS,jQuery</p>
+                        <p><a href="https://github.com/jessieyang0320/report-canvas" class="btn btn-primary" role="button" target="_blank">github</a> <a href="https://canvas-report.herokuapp.com/index.html" class="btn btn-default" role="button" target="_blank">live demo</a></p>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
                       <img src="img/portfolio/thumbnails/1.jpg" alt="...">
                       <div class="caption">
                         <h3>Comming soon... </h3>
-                        <p>Ruby on Rails, React and bootstrap</p>
+                        <p>Node.js, Express, React and bootstrap</p>
                         <p><a href="#" class="btn btn-primary" role="button" target="_blank">github</a> <a href="#" class="btn btn-default" role="button" target="_blank">live demo</a></p>
                       </div>
                     </div>
                 </div>
                 
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                      <img src="img/portfolio/thumbnails/data.png" alt="data-visualize">
-                      <div class="caption">
-                        <h3>Data Visualized Report</h3>
-                        <p>Data Visualization,Canvas, HTML, CSS,jQuery</p>
-                        <p><a href="https://github.com/jessieyang0320/report-canvas" class="btn btn-primary" role="button" target="_blank">github</a> <a href="https://htmlpreview.github.io/?https://github.com/jessieyang0320/report-canvas/blob/master/index.html" class="btn btn-default" role="button" target="_blank">live demo</a></p>
-                      </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
