--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Hi, You are looking at Jessie Yang`s website</h1>
+                <h1 id="homeHeading">Hi, Welcome To <br>Jessie Yang`s website</h1>
                 <hr>
-                <p>A Front-end developer and VR enthusiast, always learning and always envolving</p>
+                <p>A Full Stack Developer and VR enthusiast, Always Learning and Always Envolving</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
-                    <p class="text-faded">My name is Jessie Yang. I am a full-stack developer and a VR enthusiast based in New York City. I went to Bentley University and my background was in accounting. As a developer, I care about user experience and I enjoy building fully functional dynamic web applications with Node.js, React, Ruby on Rails.
+                    <p class="text-faded">My name is Jessie Yang. I am a full-stack developer and a VR enthusiast based in New York City. I`m currently seeking web developer role. I went to Bentley University and my background was in accounting. As a developer, I care about user experience and I enjoy building fully functional dynamic web applications with Node.js, React, Ruby on Rails.
                 <br/>When I'm not working on a new app, you can catch me discovering new parts of the city, attending VR meet-ups or trying to find the best cup of coffee.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">See my skills!</a>
                 </div>
@@ -115,7 +115,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
                         <h3>Secure Storage</h3>
-                        <p class="text-muted">I employ user authentication and maintain MongoDB, and PostgreSQL databases.</p>
+                        <p class="text-muted">I employ user authentication and maintain PostgreSQL database.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
